--- a/index.html
+++ b/index.html
@@ -1,67 +1,216 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
+<head>
+<meta charset="utf-8">
+<title>AntUp</title>
+<link rel="stylesheet" href="stylesheets/common.css"/>
+<link rel="stylesheet" href="stylesheets/index.css"/>
+<script src="js/index.js"></script>
+<script>
+domReady(function(){
+	(function(){
+		var oNav=document.querySelector('.nav');
+		var oS=oNav.children[0];
+		var oA=oNav.getElementsByTagName('a');
+		var N=0;
+		var iNow=0;
+		setInterval(function(){
+			N+=859/24;
+			if(N>859){
+				N=0;	
+			}
+			oS.style.backgroundPosition=-N+'px 0px';	
+		},100);
+		
+		for(var i=0;i<oA.length;i++){
+			oA[i].onmouseover=function(){
+				elastic(oS,this.offsetLeft+40);
+			};
+			oA[i].onmouseout=function(){
+				elastic(oS,iNow*oA[0].offsetWidth+40);
+			};
+			(function(index){
+				oA[i].onclick=function(){
+					for(var i=0;i<oA.length;i++){
+						oA[i].style.color='#fff'
+					}
+					this.style.color='#997';
+					iNow=index;
+				};
+			})(i);
+		}
+	})();	
+	
+	//clock
+	;(function(){
+			var oC=document.querySelector('.clock');
+			var oH=document.querySelector('.hour');
+			var oM=document.querySelector('.min');
+			var oS=document.querySelector('.sec');
+			var iNum=60;
+			var index;
+			var index2;
+			function oClock(){
+				var oDate=new Date();
+				var H=oDate.getHours();
+				var M=oDate.getMinutes();
+				var S=oDate.getSeconds();
+				var mS=oDate.getMilliseconds();
+				oH.style.WebkitTransform='rotate('+(H*30+M/60*30)+'deg)';
+				oM.style.WebkitTransform='rotate('+(M*6+S/60*6)+'deg)';
+				index=(S*6+mS/1000*6);
+				oS.style.WebkitTransform='rotate('+index+'deg)';
+			}
+			for(var i=0;i<iNum;i++){
+				var oI=document.createElement('i');
+				if(i%5==0){
+					oI.className='needle_m';
+					var oMark=document.createElement('span');
+					oMark.innerHTML=i/5;
+					if(i/5==0)oMark.innerHTML=12;
+					oMark.style.WebkitTransform='rotate('+-i*6+'deg)';
+					oI.appendChild(oMark);
+				}else{
+					oI.className='needle';
+				}
+				
+				oI.style.WebkitTransform='rotate('+i*6+'deg)';
+				oC.appendChild(oI);	
+			}
+			oClock();
+			setInterval(oClock,1);
+	})();
+	//back to top
+	;(function(){
+		var oBox=document.querySelector('.back');	
+		var bOk=false;
+		var oHead=document.querySelector('.header');
+		var oHead_B=document.querySelector('.header_bck');
+		var oT=oHead.offsetTop;
+		window.onscroll=function(){
+			var oS=document.documentElement.scrollTop||document.body.scrollTop;
+			if(oS>=oT){
+				oHead.style.position='fixed';
+				oHead_B.style.display='block';
+			}else{
+				oHead.style.position='static';
+				oHead_B.style.display='none';
+			}	
+			if(bOk){
+				clearInterval(oBox.timer);	
+			}
+			bOk=true;
+			if(oS>100){
+				oBox.style.display='block';	
+			}else{
+				oBox.style.display='none';	
+			}	
+		};
+		oBox.onclick=function(){
+			var start=document.documentElement.scrollTop||document.body.scrollTop;
+			var iTarget=0;
+			var dis=iTarget-start;
+			var count=Math.floor(1000/30);
+			var n=0;
+			clearInterval(oBox.timer);	
+			oBox.timer=setInterval(function(){
+				bOk=false;
+				n++;
+				var a=1-n/count;
+				document.documentElement.scrollTop=document.body.scrollTop=start+dis*(1-Math.pow(a,3));
+				if(n==count){
+					clearInterval(oBox.timer);	
+				}	
+			},30);
+		};
+	})();
+	//through
+	;(function(){
+		var oUl=document.getElementById('through');	
+		var aCh=oUl.children;
+		for(var i=0;i<aCh.length;i++){
+			through(aCh[i]);
+			aCh[i].style.background='url(images/2.jpg) no-repeat';	
+		}
+	})();
+	//worklist
+	;(function(){
+		var oPrev = document.querySelector('.prev');
+		var oNext = document.querySelector('.next');
+		var aLi = document.querySelectorAll(' .worklist ul li');
+		var aClass = [];
+		for(var i=0;i<aLi.length;i++){
+			aClass.push(aLi[i].className);
+		}
+		oNext.onclick=function(){
+			aClass.unshift(aClass.pop());
+			for(var i=0;i<aLi.length;i++){
+				aLi[i].className=aClass[i];
+			}
+		};
+		oPrev.onclick=function(){
+			aClass.push(aClass.shift());
+			for(var i=0;i<aLi.length;i++){
+				aLi[i].className=aClass[i];
+			}
+		};
+	})();	
+})
+</script>
+</head>
 
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Antupwork.GitHub.com : my website">
-
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Antupwork.GitHub.com</title>
-  </head>
-
-  <body>
-
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/antupwork">View on GitHub</a>
-
-          <h1 id="project_title">Antupwork.GitHub.com</h1>
-          <h2 id="project_tagline">my website</h2>
-
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
-
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
-
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://help.github.com/articles/basic-writing-and-formatting-syntax/#mentioning-users-and-teams" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
-      </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
-    
-
-  </body>
+<body>
+<div class="header">
+	<div class="clearfix wrapper nav">
+		<span></span>
+		<a href="javasctipr:;">Home</a>
+		<a href="javasctipr:;">About Me	</a>
+		<a href="javasctipr:;">WorkHouse</a>
+		<a href="javasctipr:;">Contact Me</a>
+	</div>
+</div>
+<div class="header_bck"></div>
+<div class="top_pic">
+	<img src="images/cover-01.jpg"/>
+	<h1>ant</h1>
+	<div class="clock">
+		<div class="hour"></div>
+		<div class="min"></div>
+		<div class="sec"></div>
+		<p class="dot"></p>
+	</div>
+</div>
+<div class="worklist">
+	<ul>
+		<li class="cur"><a href="javascript:;"></a></li>
+		<li class="r1">2</li>
+		<li class="r2">3</li>
+		<li>4</li>
+		<li>5</li>
+		<li>6</li>
+		<li>7</li>
+		<li>8</li>
+		<li>9</li>
+		<li class="l2">10</li>
+		<li class="l1">11</li>
+	</ul>
+	<div class="worklist-btn">
+		<a href="javascript:;" class="prev">←</a>
+		<a href="javascript:;" class="next">→</a>
+	</div>
+</div>
+<div class="through">
+	<ul id="through" class=" wrapper">
+		<li><span><a href="javascript:;">css / html</a></span></li>
+		<li><span><a href="javascript:;">css / html</a></span></li>
+		<li><span><a href="javascript:;">css / html</a></span></li>
+		<li><span><a href="javascript:;">css / html</a></span></li>
+		<li><span><a href="javascript:;">css / html</a></span></li>
+		<li><span><a href="javascript:;">css / html</a></span></li>
+	</ul>
+</div>
+<div class="back">
+	<img src="images/loading.gif"/>
+</div>
+</body>
 </html>
