--- a/demo/3Dchange.html
+++ b/demo/3Dchange.html
@@ -6,7 +6,7 @@
 	<style>
 		*{margin: 0;padding: 0;}
 		body{background: #000;}
-		.change_3d{width: 120px;height: 210px;position: relative;margin: 500px 100px;-webkit-transform:perspective(800px) rotateY(0deg) rotateX(0deg);-webkit-transform-style:preserve-3d;}
+		.change_3d{width: 120px;height: 210px;position: relative;margin: 100px auto;-webkit-transform:perspective(800px) rotateY(0deg) rotateX(0deg);-webkit-transform-style:preserve-3d; position:relative;}
 		.change_3d span{width: 100%;height: 100%; position: absolute;left: 0;top: 80px;}
 	</style>
 	<script>
@@ -15,7 +15,7 @@
 			var N=8;
 			for(var i=0;i<N;i++){
 				var oS=document.createElement('span');
-				oS.style.background='url(images/'+(i+14)+'.png) no-repeat';
+				oS.style.background='url(img/'+(i+14)+'.png) no-repeat';
 				oS.style.backgroundSize='contain'
 				oChange.appendChild(oS);
 				oS.style.WebkitTransition='1s all ease '+(N-i)*200+'ms';
@@ -50,7 +50,7 @@
 				document.onmouseup=function(){
 					document.onmouseup=null;
 					document.onmousemove=null;
-					oBox.timer=setInterval(function(){
+					timer=setInterval(function(){
 						iSpeedX*=0.99;
 						iSpeedY*=0.99;
 						y+=iSpeedX;
@@ -59,7 +59,7 @@
 						if(Math.abs(iSpeedX)<1)iSpeedX=0;
 						if(Math.abs(iSpeedY)<1)iSpeedY=0;
 						if(iSpeedX==0&&iSpeedY==0){
-							clearInterval(oBox.timer);
+							clearInterval(timer);
 						}
 					},30);
 				};
