--- a/index.html
+++ b/index.html
@@ -297,6 +297,9 @@ domReady(function(){
 		<li class="l1"><a href="demo/3Dchange.html" target="_blank"><img src="images/work8.jpg"/></a><p>3d展示</p></li>
 	</ul>
 </div>
+<div class="imitate">
+	<h3>imitate page</h3>
+</div>
 <div class="through">
 	<h3>Work Skill</h3>
 	<ul id="through" class=" wrapper" >
@@ -313,6 +316,8 @@ domReady(function(){
 <div class="back">
 	<img src="images/loading.gif"/>
 </div>
+<div class="information">
 
+</div>
 </body>
 </html>
