something i don't need

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ oo++so++//+/ssooo/:://+sssss++/::/:-:__::::ohdddddmdddmmdmmdyshysssyyhdhddhhmhhs
 		<a href="javasctipr:;">Home</a>
 		<a href="javasctipr:;">WorkHouse</a>
 		<a href="javasctipr:;">Work skill</a>
-		<a href="javasctipr:;">About Me</a>
+		<a href="javasctipr:;">Concat Me</a>
 	</div>
 </div>
 <div class="header_bck"></div>
@@ -84,6 +84,7 @@ oo++so++//+/ssooo/:://+sssss++/::/:-:__::::ohdddddmdddmmdmmdyshysssyyhdhddhhmhhs
 	<span class="ball">css、html</span>
 	<span class="ball">Javascript</span>
 	<span class="ball">DOM</span>
+	<span class="ball">React</span>
 	<span class="ball">Jquery</span>
 </div>
 <div class="worklist">
@@ -108,25 +109,25 @@ oo++so++//+/ssooo/:://+sssss++/::/:-:__::::ohdddddmdddmmdmmdyshysssyyhdhddhhmhhs
 				<p>web移动端页面<i>(请在移动端设备或模式下查看)</i></p>
 				</a>
 			</li>
-			<li><a href="demo/aoshi/index.html" target="_blank"><img src="images/aoshi.jpg" /></a><p>pc端页面</p></li>
+			<!--<li><a href="demo/aoshi/index.html" target="_blank"><img src="images/aoshi.jpg" /></a><p>pc端页面</p></li>-->
 			<li><a href="demo/tiger.html" target="_blank"><img src="images/tiger.jpg" /></a><p>raphael描svg效果</p></li>
 		</ul>
 		<ol>
 			<li class="on"></li>
 			<li></li>
-			<li></li>
+			<!--<li></li>-->
 		</ol>
 	</div>
 </div>
 <div class="through">
 	<h3>Work Skill</h3>
 	<ul id="through" class=" wrapper" >
-		<li><a href="javascript:;"><span>熟练使用HTML和CSS,独立完成各类静态页面布局</span></a><p>Css Html</p></li>
-		<li><a href="javascript:;"><span>熟练使用原生JS,DOM操作实现网页动态效果，实现前后端数据交互</span></a><p>JavaScript</p></li>
+		<li><a href="javascript:;"><span>熟练使用React等周边框架</span></a><p>React.JSX</p></li>
+		<li><a href="javascript:;"><span>熟练使用HTML和CSS,原生JS,DOM操作实现网页动态效果，实现前后端数据交互</span></a><p>JavaScript</p></li>
 		<li><a href="javascript:;"><span>熟悉使用Jquery，熟悉Jquery插件机制</span></a><p>Jquery</p></li>
 		<li><a href="javascript:;"><span>熟悉Bootstrap、自适应布局、百分比布局、弹性布局，熟悉使用canvas制作简单效果</span></a><p>Css3 Html5</p></li>
 		<li><a href="javascript:;"><span>熟悉操作各类增、删、改、查效果</span></a><p>DOM</p></li>
-		<li><a href="javascript:;"><span>代码分离整合，熟悉运动方法，属性，继承</span></a><p>MVC,面向对象</p></li>
+		<li><a href="javascript:;"><span>代码分离整合，熟悉运动方法，属性，继承</span></a><p>MV*</p></li>
 		<li><a href="javascript:;"><span>字符串与数组的转换，排序，增加，删除，修改，查找</span></a><p>计算机算法</p></li>
 		<li><a href="javascript:;"><span>使用Ajax,Jsonp进行前后端数据交互</span></a><p>数据交互</p></li>
 	</ul>
@@ -135,9 +136,9 @@ oo++so++//+/ssooo/:://+sssss++/::/:-:__::::ohdddddmdddmmdmmdyshysssyyhdhddhhmhhs
 	<img src="images/loading.gif"/>
 </div>
 <div class="information">
-	<h3>About Me<span>点击图片切换到下一页</span></h3>
-	<div class="information_list">
-	</div>
+	<h3>Concat Me<span style="font-size: 16px; text-indent: 24px">    email: antupmain@sina.com</span></h3>
+	<!--<div class="information_list">-->
+	<!--</div>-->
 </div>
 </body>
 </html>
